force-app/main/default/objects/FieloSVY__Survey__c/FieloSVY__Survey__c.object-meta.xml
<CustomObject>
    <label>Survey</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>