force-app/main/default/objects/FieloSVY__Survey__c/fields/FieloSVY__Title__c.field-meta.xml
<CustomField>
    <fullName>FieloSVY__Title__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter a title that will be displayed above the description text, on top of the survey</inlineHelpText>
    <label>Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>